# FREDMACRO

./: .gitignore  README.md  app.py  labor.ipynb  pyproject.toml  requirements.txt  secrets.toml
core/: config.py  fred_client.py  plotting.py  transforms.py
notebooks/: inflation.ipynb  labor.ipynb
sections/: inflation.py  labor.py
