[project]
name = "fred_macro"
version = "0.1.0"
description = "FRED-based US Macro Dashboard — shared core for Colab + Streamlit"
requires-python = ">=3.10"
dependencies = [
    "fredapi>=0.5.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "plotly>=5.18",
    "python-dotenv>=1.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "sections"]
